--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="styles/about.css">
     <link rel="stylesheet" href="styles/customers.css">
     <link rel="stylesheet" href="styles/features.css">
+    <link rel="stylesheet" href="styles/tips.css">
 </head>
 <body>
     <div class="page">
@@ -34,7 +35,8 @@
                 <a href="#" class="navigation__item">Library<i class="navigation__arrow"></i></a>
                
         </nav>
-        <button class="action-button">Get Started</button>
+        <button class="action-button header__button">Get Started</button>
+       <button class="header__menu-button"> <span class="header__menu-icon" ></span></button>
        
     </header>
 
@@ -45,11 +47,11 @@
      <h1 class="headline__title">Build stunning websites & apps.</h1>
      <p class="headline__description">Create live segments and target the right people for messages based on their behaviors.</p>
      <div class="headline__actions">
-        <button class="action-button">Get Started</button>
-        <button class="headline__learn-more-btn">Learn More</button>
+        <button class=" action-button  headline__action-btn">Get Started</button>
+        <button class=" headline__learn-more-btn headline__action-btn">Learn More</button>
      </div>
     </div>
-     <img class="headline__banner" src="img/ouch.png" alt="Headline Banner">
+     <img class="headline__banner" src="img/ouch1.png" alt="Headline Banner">
 
     </section>
 </div>
@@ -67,16 +69,72 @@
  <!-- customers -->
 
  <section class="customers">
-   <img class="customers__logo" src="img/logo-nyt.png" alt="New Tork Times logo">
-   <img class="customers__logo" src="img/logo-forbes.png" alt="Forbes logo">
-   <img class="customers__logo" src="img/logo-appel.png" alt="Apple logo">
-   <img class="customers__logo" src="img/logo-mashable.png" alt="Masable logo">
-   <img class="customers__logo" src="img/logo-wsj.png"  alt="WSJ logo">
-   <img class="customers__logo" src="img/logo-google.png" alt="Google logo">
+     <div class="customers__row">
+     <div class="customers__item">
+            <img class="customers__logo " src="img/logo-nyt.png" alt="New Tork Times logo">
+     </div>
 
+     <div class="customers__item">
+          <img class="customers__logo" src="img/logo-forbes.png" alt="Forbes logo">
+   </div>
+
+   <div class="customers__item">
+         <img class="customers__logo" src="img/logo-appel.png" alt="Apple logo">
+   </div>
+</div>
+<div class="customers__row">
+   <div class="customers__item">
+         <img class="customers__logo" src="img/logo-mashable.png" alt="Masable logo">
+   </div>
+
+   <div class="customers__item">
+       <img class="customers__logo" src="img/logo-wsj.png"  alt="WSJ logo">
+   </div>
+
+   <div class="customers__item">
+         <img class="customers__logo" src="img/logo-google.png" alt="Google logo">
+   </div>
+</div>
  </section>
+ <!-- features - Mobile -->
+<section class="tips">
+<div class="tip">
+   <span class="tip__subtitle">Acquire Customers</span>
+   <h3 class="tip__title">Easily find leads and customers</h3>
+   <p class="tip__description">Send one-off and automated email,
+        push, and in-app messages to people. Create better stories.</p>
+   <figure class="tip__decoration">
+       <img class="tip__image" src="img/tip-acquire-customers.png" alt="Acquire Customers">
+       <figcaption class="tip__image-caption">A better way to acquire new users</figcaption>
+   </figure>
 
- <!-- feauter -->
+</div>
+<div class="tip">
+   <span class="tip__subtitle">Engage Users</span>
+   <h3 class="tip__title">Engage with your audience</h3>
+   <p class="tip__description">Send one-off and automated email, push, 
+       and in-app messages to people. 
+       Create better stories..</p>
+   <figure class="tip__decoration">
+       <img class="tip__image" src="img/tip-engage-users.png" alt="Engage Users">
+       <figcaption class="tip__image-caption">Knowledge base and smart self-service</figcaption>
+   </figure>
+
+</div>
+<div class="tip">
+   <span class="tip__subtitle">Support</span>
+   <h3 class="tip__title">The best customer experiences</h3>
+   <p class="tip__description">A beautifully simple system for tracking, prioritizing,
+        and solving customer support tickets.</p>
+   <figure class="tip__decoration">
+       <img class="tip__image" src="img/tip-support.png" alt="Acquire Customers">
+       <figcaption class="tip__image-caption">Live chat and messaging</figcaption>
+   </figure>
+
+</div>
+
+</section>
+ <!-- features - Desktop -->
  <section class="features">
         <img class="features__left-decoration" src="img/hidden-ouch.png" alt="half hidden head">
      <div class="features__content">
