--- a/index.html
+++ b/index.html
@@ -175,6 +175,14 @@
                     <div class="logo__description">Startup landing template</div>
                 </div>
             </div>
+
+            <div class="logo-vertical">
+                <img class="logo-vertical__image" src="img/icon.png" alt="logo">
+                <div class="logo__text">
+                <div class="logo-vertical__name"> Foundation</div>
+                <div class="logo-vertical__description">Startup landing template</div>
+            </div>
+        </div>
                 <p class="footer__description">Foundation is a website template for startups and small teams.
                      It helps to build a website in no time.</p>
                      <div class="downloads">
@@ -182,6 +190,7 @@
                          <img src="img/google-play.png" alt="Google Play downloads">
                      </div>
                    </div>
+                   <div class="footer__line hide_desktop"></div>
     <div class="additional-navigation">
         <div class="additional-navigation__column nav-links">
       <h3 class="nav-links__title">product</h3>
@@ -193,7 +202,7 @@
           <li class="nav-links__list-item">virtual Inbox</li>
       </ul>
     </div>
-    <div class="nav-links">
+    <div class="  additional-navigation__column nav-links">
             <h3 class="nav-links__title">Company</h3>
             <ul class="nav-links__list">
                 <li class="nav-links__list-item"> About Foundation</li>
@@ -206,7 +215,7 @@
     </div>
 
      </div>
-     <div class="footer__line"></div>
+     <div class="footer__line hide_mobile"></div>
      <div class="footer-links">
          <nav class="terms">
              <a href="#" class= "terms__items"> Terms</a>
